Assignment 10: Updated project to compare the performance speed of the current Analyze concordance logic and logic utilizing the tokenize function from NLTK.
